objects/DandB_SeriousCreditInfringement__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_SeriousCreditInfringement</relationshipLabel>
        <relationshipName>DandB_SeriousCreditInfringement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>accountTypeCode__c</fullName>
        <label>accountTypeCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountTypeDesc__c</fullName>
        <label>accountTypeDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditObligationCode__c</fullName>
        <label>creditObligationCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditObligationDesc__c</fullName>
        <label>creditObligationDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentAmount__c</fullName>
        <label>currentAmount</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentCreditProvider__c</fullName>
        <label>currentCreditProvider</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentCustomerReference__c</fullName>
        <label>currentCustomerReference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentReasonToReportCode__c</fullName>
        <label>currentReasonToReportCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentReasonToReportDesc__c</fullName>
        <label>currentReasonToReportDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateOfDefaultDay__c</fullName>
        <label>dateOfDefaultDay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateOfDefaultMonth__c</fullName>
        <label>dateOfDefaultMonth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateOfDefaultYear__c</fullName>
        <label>dateOfDefaultYear</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastPaymentDay__c</fullName>
        <label>lastPaymentDay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastPaymentMonth__c</fullName>
        <label>lastPaymentMonth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastPaymentYear__c</fullName>
        <label>lastPaymentYear</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>originalAmount__c</fullName>
        <label>originalAmount</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>originalCreditProvider__c</fullName>
        <label>originalCreditProvider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>originalCustomerReference__c</fullName>
        <label>originalCustomerReference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>originalReasonToReportCode__c</fullName>
        <label>originalReasonToReportCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>originalReasonToReportDesc__c</fullName>
        <label>originalReasonToReportDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purpose__c</fullName>
        <label>purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segId__c</fullName>
        <label>segId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>statusCode__c</fullName>
        <label>statusCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>statusDesc__c</fullName>
        <label>statusDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DandB_SeriousCreditInfringement</label>
    <nameField>
        <label>DandB_SeriousCreditInfringement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_SeriousCreditInfringement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>